--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "Inhwa_Notion_Cloning",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/main.js",
+  "main": "main.js",
   "dependencies": {
     "dotenv": "^16.0.1",
     "request": "^2.88.2",
+    "webpack-cli": "^4.9.2",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
-  },
-  "devDependencies": {
     "webpack-dev-server": "^4.9.0"
   },
+  "devDependencies": {},
   "scripts": {
-    "build": "webpack --mode production",
-    "webpack": "webpack-dev-server --mode development"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
