--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "axios": "^0.27.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0"
+    "dotenv-webpack": "^7.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "styled-loader": "0.0.0"
   },
   "scripts": {
     "build": "webpack --mode production",
